# elastic-optical-networks

./: .clang-format  .conf  .editorconfig  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  SECURITY.md  build.sh  index.css  index.html  index.js  main.py  settings.json
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: build.yml  ci.yml  release.yml  ubuntu.yml
application/: CMakeLists.txt  Dockerfile  conanfile.txt  distribution.cpp  main.cpp
application/core/: CMakeLists.txt  agent.cpp  agent.h  application.cpp  application.h  arena.cpp  arena.h  configuration.cpp  configuration.h  csv.cpp  csv.h  document.h  file_system.cpp  file_system.h  flexgrid.cpp  flexgrid.h  graph.cpp  graph.h  json.cpp  json.h  kernel.cpp  kernel.h  lightpath.h  logger.h  prng.cpp  prng.h  request.cpp  request.h  route.cpp  route.h  spectrum.cpp  spectrum.h
application/core/include/: configuration.h  date.h  distribution.h  document.h  event_queue.h  graph.h  kernel.h  logger.h  math.h  prng.h  request.h  route.h  settings.h  simulation.h  spectrum.h
application/core/source/: configuration.cpp  distribution.cpp  graph.cpp  json.cpp  kernel.cpp  parser.cpp  prng.cpp  request.cpp  route.cpp  settings.cpp  simulation.cpp  spectrum.cpp
application/graph/: CMakeLists.txt  bfs.cpp  bfs.h  cost.cpp  cost.h  csv.cpp  csv.h  dfs.cpp  dfs.h  dijkstra.cpp  dijkstra.h  edge.h  graph.cpp  graph.h  ksp.cpp  ksp.h  route.cpp  route.h  router.cpp  router.h  vertex.h
application/hash/: CMakeLists.txt  cantor.cpp  cantor.h
application/main/: CMakeLists.txt  main.cpp
application/prng/: CMakeLists.txt  discrete.cpp  discrete.h  distribution.h  exponential.cpp  exponential.h  normal.cpp  normal.h  poisson.cpp  poisson.h  prng.cpp  prng.h  uniform.cpp  uniform.h
application/test/: CMakeLists.txt  flexgrid.cpp  spectrum.cpp
cli/: Dockerfile  build.sh  configuration.json  main.py  run.sh
documentation/: Diagram.drawio  Diagram.puml
geocoding/: .gitignore  Dockerfile  build.sh  extractor.py  geocode.py  geocoding.sh  main.py
gui/: forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.mts  vite.renderer.config.mts
gui/src/: app.tsx  main.ts
gui/src/adapters/: main.ts  preload.ts
gui/src/infrastructure/adapters/: preload.ts
gui/src/infrastructure/ui/: app.tsx  index.css  index.html  renderer.ts
gui/src/infrastructure/ui/routes/root/: index.tsx
gui/src/services/: docker.ts
gui/src/ui/: app.tsx  index.css  index.html
gui/src/ui/layout/: index.tsx
gui/src/ui/layout/form/: index.tsx
gui/src/ui/layout/navigation/: index.tsx
gui/src/ui/layout/theme/: index.tsx
gui/src/ui/layout/typography/: index.tsx
gui/src/ui/routes/: router.tsx
gui/src/ui/routes/editor/: index.tsx
gui/src/ui/routes/root/: index.tsx
include/: connection.h  distribution.h  event_queue.h  graph.h  group.h  json.h  logger.h  math.h  parser.h  request.h  route.h  settings.h  simulation.h  spectrum.h  statistics.h  timer.h  view.h
resources/: abilene.txt  arpanet-1970.csv  arpanet-1970.txt  germany-17.csv  ipe.csv  ipe.txt  jpn-48.csv  modulations.json  pan-european.txt  point-to-point.csv  requests.json
resources/configuration/: configuration.json  settings.json
resources/graph/: abilene.csv  abilene.txt  arpanet-1970.csv  arpanet-1970.txt  germany-17.csv  germany-17.txt  ipe.csv  ipe.txt  jpn-48-full-mesh.txt  jpn-48.csv  jpn-48.txt  mesh.txt  nsfnet-full-mesh.txt  nsfnet.csv  nsfnet.txt  pan-european.csv  pan-european.txt  point-to-point.csv  tree.txt
scripts/: build.sh  cleanup.sh  format.sh  main.py  profile.sh  test.sh  watch.sh
source/: CMakeLists.txt  app.cpp  connection.cpp  date.cpp  distribution.cpp  graph.cpp  group.cpp  json.cpp  main.cpp  math.cpp  parser.cpp  request.cpp  route.cpp  settings.cpp  simulation.cpp  spectrum.cpp  statistics.cpp  timer.cpp  view.cpp
test/: main.cpp  spectrum.cpp
visualization/: Dockerfile  build.sh  main.py  plot.sh  requirements.txt
